--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ li {
 
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content auto 40vw repeat(3, min-content);
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] 1fr [full-end]; }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
@@ -181,11 +181,52 @@ li {
   gap: 7rem; }
 
 .home {
-  background-color: #f9f7f6; }
-  .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
-    fill: #c69963;
-    height: 2rem;
-    width: 2rem; }
+  background-color: #f9f7f6;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 3.5rem; }
+  .home__img {
+    z-index: 1;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2; }
+  .home__like {
+    z-index: 2;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    justify-self: end;
+    fill: #fff;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 1rem; }
+  .home__name {
+    width: 80%;
+    z-index: 2;
+    grid-column: 1 / -1;
+    grid-row: 1/2;
+    justify-self: center;
+    align-self: end;
+    transform: translateY(50%);
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.6rem;
+    text-align: center;
+    background-color: #101d2c;
+    color: #fff;
+    font-weight: 400;
+    padding: 1.25rem; }
+  .home__location, .home__rooms {
+    margin-top: 2.5rem; }
+  .home__location, .home__rooms, .home__area, .home__price {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center; }
+    .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
+      fill: #c69963;
+      height: 2rem;
+      width: 2rem; }
+  .home__btn {
+    grid-column: 1 / -1; }
 
 .gallery {
   background-color: #54483a;
