--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -9,27 +9,72 @@
 
 .home {
   background-color: $color-grey-light-1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 3.5rem;
 
   &__img {
+    z-index: 1;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
   }
 
   &__like {
+    z-index: 2;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    justify-self: end;
+
+    fill: $color-white;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 1rem;
   }
 
   &__name {
+    width: 80%;
+    z-index: 2;
+
+    grid-column: 1 / -1;
+    grid-row: 1/2;
+    justify-self: center;
+    align-self: end;
+
+    transform: translateY(50%);
+
+    font-family: $font-display;
+    font-size: 1.6rem;
+    text-align: center;
+    background-color: $color-secondary;
+    color: $color-white;
+    font-weight: 400;
+
+    padding: 1.25rem;
+  }
+
+  &__location,
+  &__rooms {
+    margin-top: 2.5rem;
   }
 
   &__location,
   &__rooms,
   &__area,
   &__price {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+
     svg {
       fill: $color-primary;
       height: 2rem;
       width: 2rem;
     }
+  }
 
-    p {
-    }
+  &__btn {
+    grid-column: 1 / -1;
   }
 }
