--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -3,4 +3,33 @@
 
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
+
+  text-align: center;
+}
+
+.nav-btn {
+  border: none;
+  border-radius: 0;
+
+  background-color: $color-white;
+  height: 2px;
+  width: 4.5rem;
+  margin-top: 2rem;
+
+  &::before,
+  &::after {
+    background-color: $color-white;
+    height: 2px;
+    width: 4.5rem;
+    content: "";
+    display: block;
+  }
+
+  &::before {
+    transform: translateY(1.5rem);
+  }
+
+  &::after {
+    transform: translateY(3rem);
+  }
 }
