--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,34 @@
-/* makes sizing simpler */
 *,
 *::before,
 *::after {
-  box-sizing: border-box; }
-
-/* remove default spacing */
-/* force styling of type through styling, rather than elements */
-* {
   margin: 0;
   padding: 0;
-  font: inherit; }
+  box-sizing: inherit; }
 
-/* dark mode user-agent-styles */
-/* improves punctuation in supported browsers */
 html {
-  hanging-punctuation: first last;
+  box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 50%; } }
 
-/* min body height */
 body {
-  min-height: 100svh;
   font-family: "Nunito", sans-serif;
   color: #6d5d4b;
   font-weight: 300;
   line-height: 1.6; }
 
-/* responsive images/videos */
-img,
-picture,
-svg,
-video {
-  display: block;
-  max-width: 100%; }
-
-/* Improved heading in supported browsers */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  text-wrap: balance; }
-
-/* improve readability with max-width on paragraphs and lists */
-/* prevent orphans in supported browsers */
-p,
-li {
-  max-width: var(--p-max-width, 65ch);
-  text-wrap: pretty; }
-
 .container {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
-  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] 1fr [full-end]; }
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 62.5em) {
+    .container {
+      grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+      grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 50em) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem); } }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Josefin Sans", sans-serif;
@@ -87,13 +63,14 @@ li {
 .btn {
   background-color: #c69963;
   color: #fff;
-  border: 0;
+  border: none;
   border-radius: 0;
   font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
   text-transform: uppercase;
   padding: 1.8rem 3rem;
   cursor: pointer;
-  transition: all 0.3s; }
+  transition: all 0.2s; }
   .btn:hover {
     background-color: #b28451; }
 
@@ -113,7 +90,14 @@ li {
   background-color: #c69963;
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
-  text-align: center; }
+  display: flex;
+  justify-content: center; }
+  @media only screen and (max-width: 62.5em) {
+    .sidebar {
+      grid-column: 1 / -1;
+      grid-row: 1 / 2;
+      justify-content: flex-end;
+      align-items: center; } }
 
 .nav-btn {
   border: none;
@@ -121,7 +105,7 @@ li {
   background-color: #fff;
   height: 2px;
   width: 4.5rem;
-  margin-top: 2rem; }
+  margin-top: 4rem; }
   .nav-btn::before, .nav-btn::after {
     background-color: #fff;
     height: 2px;
@@ -129,9 +113,17 @@ li {
     content: "";
     display: block; }
   .nav-btn::before {
-    transform: translateY(1.5rem); }
+    transform: translateY(-1.5rem); }
   .nav-btn::after {
-    transform: translateY(3rem); }
+    transform: translateY(1.3rem); }
+  @media only screen and (max-width: 62.5em) {
+    .nav-btn {
+      margin-top: 0;
+      margin-right: 3rem; }
+      .nav-btn::before {
+        transform: translateY(-1.2rem); }
+      .nav-btn::after {
+        transform: translateY(1rem); } }
 
 .header {
   background-color: #54483a;
@@ -146,6 +138,12 @@ li {
   grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   justify-content: center; }
+  @media only screen and (max-width: 50em) {
+    .header {
+      grid-column: 1 / -1; } }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      padding: 5rem; } }
   .header__logo {
     height: 3rem;
     justify-self: center; }
@@ -178,38 +176,58 @@ li {
 .realtors {
   background-color: #101d2c;
   grid-column: col-start 7 / full-end;
-  display: flex;
-  flex-direction: column;
+  padding: 3rem;
+  display: grid;
+  align-content: center;
   justify-content: center;
-  align-items: center;
-  row-gap: 2rem; }
+  justify-items: center;
+  grid-row-gap: 2rem; }
+  @media only screen and (max-width: 50em) {
+    .realtors {
+      grid-column: 1 / -1; } }
   .realtors__list {
     display: grid;
-    grid-template-columns: auto max-content;
-    gap: 2rem;
-    justify-content: center; }
+    grid-template-columns: min-content max-content;
+    grid-column-gap: 2rem;
+    grid-row-gap: 5vh;
+    align-items: center; }
+    @media only screen and (max-width: 50em) {
+      .realtors__list {
+        grid-template-columns: repeat(3, min-content max-content); } }
+    @media only screen and (max-width: 37.5em) {
+      .realtors__list {
+        grid-template-columns: min-content max-content; } }
   .realtors__img {
-    width: 10rem;
-    border-radius: 50%; }
-  .realtors__details {
-    font-size: 1.6rem;
-    align-self: center; }
+    width: 7rem;
+    border-radius: 50%;
+    display: block; }
   .realtors__sold {
+    text-transform: uppercase;
     color: #aaa;
-    text-transform: uppercase; }
+    margin-top: -3px; }
 
 .features {
   grid-column: center-start / center-end;
-  margin: 15rem 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  gap: 6rem;
-  align-items: start; }
+  margin: 15rem 0; }
+  @supports (display: grid) {
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+      grid-gap: 6rem;
+      align-items: start; } }
 
 .feature {
+  float: left;
+  width: 33.3333%;
+  margin-bottom: 6rem;
   display: grid;
-  grid-template-columns: auto 1fr;
-  gap: 1.5rem; }
+  grid-template-columns: min-content 1fr;
+  grid-row-gap: 1.5rem;
+  grid-column-gap: 2.5rem; }
+  @supports (display: grid) {
+    .feature {
+      width: auto;
+      margin-bottom: 0; } }
   .feature__icon {
     fill: #c69963;
     width: 4.5rem;
@@ -217,37 +235,60 @@ li {
     grid-row: 1 / span 2;
     transform: translateY(-1rem); }
   .feature__text {
-    font-size: 1.7rem;
-    align-self: flex-start; }
+    font-size: 1.7rem; }
 
 .story__pictures {
   background-color: #c69963;
   grid-column: full-start / col-end 4;
   background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+  background-size: cover;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   align-items: center; }
+  @media only screen and (max-width: 50em) {
+    .story__pictures {
+      grid-column: 1 / -1;
+      padding: 6rem; } }
 
 .story__img--1 {
-  grid-column: 2 / span 4;
-  grid-row: 2 / span 4;
+  width: 100%;
+  grid-row: 2 / 6;
+  grid-column: 2 / 6;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+  @media only screen and (max-width: 50em) {
+    .story__img--1 {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1; } }
 
 .story__img--2 {
+  width: 115%;
   grid-row: 4 / 6;
   grid-column: 4 / 7;
-  transform: translateX(10%) scale(1.2);
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
-  z-index: 10; }
+  z-index: 20;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
+  @media only screen and (max-width: 50em) {
+    .story__img--2 {
+      grid-row: 1 / -1;
+      width: 100%; } }
 
 .story__content {
   background-color: #f9f7f6;
-  grid-column: col-end 4 / full-end;
+  grid-column: col-start 5 / full-end;
   padding: 6rem 8vw;
+  /*
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        */
   display: grid;
   align-content: center;
   justify-items: start; }
+  @media only screen and (max-width: 50em) {
+    .story__content {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6; } }
 
 .story__text {
   font-size: 1.5rem;
@@ -259,53 +300,54 @@ li {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  gap: 7rem; }
+  grid-gap: 7rem; }
 
 .home {
   background-color: #f9f7f6;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  row-gap: 3.5rem; }
+  grid-row-gap: 3.5rem; }
   .home__img {
-    z-index: 1;
+    width: 100%;
+    grid-row: 1 / 2;
     grid-column: 1 / -1;
-    grid-row: 1 / 2; }
+    z-index: 1; }
   .home__like {
-    z-index: 2;
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    justify-self: end;
-    fill: #fff;
+    fill: #c69963;
     height: 2.5rem;
     width: 2.5rem;
+    z-index: 2;
+    justify-self: end;
     margin: 1rem; }
   .home__name {
-    width: 80%;
-    z-index: 2;
+    grid-row: 1 / 2;
     grid-column: 1 / -1;
-    grid-row: 1/2;
     justify-self: center;
     align-self: end;
-    transform: translateY(50%);
+    z-index: 3;
+    width: 80%;
     font-family: "Josefin Sans", sans-serif;
     font-size: 1.6rem;
     text-align: center;
+    padding: 1.25rem;
     background-color: #101d2c;
     color: #fff;
     font-weight: 400;
-    padding: 1.25rem; }
+    transform: translateY(50%); }
   .home__location, .home__rooms {
     margin-top: 2.5rem; }
   .home__location, .home__rooms, .home__area, .home__price {
     font-size: 1.5rem;
     margin-left: 2rem;
     display: flex;
-    gap: 1rem;
     align-items: center; }
     .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
       fill: #c69963;
       height: 2rem;
-      width: 2rem; }
+      width: 2rem;
+      margin-right: 1rem; }
   .home__btn {
     grid-column: 1 / -1; }
 
@@ -313,69 +355,69 @@ li {
   background-color: #f9f7f6;
   grid-column: full-start / full-end;
   display: grid;
+  /*grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(7, 5vw);*/
   grid-template: repeat(7, 5vw)/repeat(8, 1fr);
-  gap: 1.5rem;
+  grid-gap: 1.5rem;
   padding: 1.5rem; }
+  .gallery__item--1 {
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 2; }
+  .gallery__item--2 {
+    grid-row: 1 / span 3;
+    grid-column: 3 / span 3; }
+  .gallery__item--3 {
+    grid-row: 1 / span 2;
+    grid-column: 6 / 7; }
+  .gallery__item--4 {
+    grid-row: 1 / span 2;
+    grid-column: 7 / -1; }
+  .gallery__item--5 {
+    grid-row: 3 / span 3;
+    grid-column: 1 / span 2; }
+  .gallery__item--6 {
+    grid-row: 4 / span 2;
+    grid-column: 3 / span 2; }
+  .gallery__item--7 {
+    grid-row: 4 / 5;
+    grid-column: 5 / 6; }
+  .gallery__item--8 {
+    grid-row: 3 / span 2;
+    grid-column: 6 / span 2; }
+  .gallery__item--9 {
+    grid-row: 3 / span 3;
+    grid-column: 8 / -1; }
+  .gallery__item--10 {
+    grid-row: 6 / span 2;
+    grid-column: 1 / 2; }
+  .gallery__item--11 {
+    grid-row: 6 / span 2;
+    grid-column: 2 / span 2; }
+  .gallery__item--12 {
+    grid-row: 6 / span 2;
+    grid-column: 4 / 5; }
+  .gallery__item--13 {
+    grid-row: 5 / span 3;
+    grid-column: 5 / span 3; }
+  .gallery__item--14 {
+    grid-row: 6 / span 2;
+    grid-column: 8 / -1; }
   .gallery__img {
     width: 100%;
     height: 100%;
-    object-fit: cover; }
-  .gallery__item--1 {
-    grid-column: 1 / 3;
-    grid-row: 1 / 3; }
-  .gallery__item--2 {
-    grid-column: 3 / 6;
-    grid-row: 1 / 4; }
-  .gallery__item--3 {
-    grid-column: 6 / 7;
-    grid-row: 1 / 3; }
-  .gallery__item--4 {
-    grid-column: 7 / 9;
-    grid-row: 1 / 3; }
-  .gallery__item--5 {
-    grid-column: 1 / 3;
-    grid-row: 3 / 6; }
-  .gallery__item--6 {
-    grid-column: 3 / 5;
-    grid-row: 4 / 6; }
-  .gallery__item--7 {
-    grid-column: 5 / 6;
-    grid-row: 4 / 5; }
-  .gallery__item--8 {
-    grid-column: 6 / 8;
-    grid-row: 3 / 5; }
-  .gallery__item--9 {
-    grid-column: 8/ 9;
-    grid-row: 3 / 6; }
-  .gallery__item--10 {
-    grid-column: 1 / 2;
-    grid-row: 6/ 8; }
-  .gallery__item--11 {
-    grid-column: 2 / 4;
-    grid-row: 6/ 8; }
-  .gallery__item--12 {
-    grid-column: 4 / 5;
-    grid-row: 6 / 8; }
-  .gallery__item--13 {
-    grid-column: 5 / 8;
-    grid-row: 5 / 8; }
-  .gallery__item--14 {
-    grid-column: 8 / 9;
-    grid-row: 6 / 8; }
+    object-fit: cover;
+    display: block; }
 
 .footer {
   background-color: #101d2c;
   grid-column: full-start / full-end;
   padding: 8rem; }
-  .footer__copyright {
-    text-align: center;
-    margin-top: 6rem; }
 
 .nav {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  gap: 2rem;
+  grid-gap: 2rem;
   align-items: center; }
   .nav__link:link, .nav__link:visited {
     font-size: 1.4rem;
@@ -388,5 +430,14 @@ li {
     display: block;
     transition: all 0.2s; }
   .nav__link:hover, .nav__link:active {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.05);
     transform: translateY(-3px); }
+
+.copyright {
+  font-size: 1.4rem;
+  color: #aaa;
+  margin-top: 6rem;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  width: 70%; }
