--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,31 +1,43 @@
 .realtors {
   background-color: $color-secondary;
   grid-column: col-start 7 / full-end;
-  display: flex;
-  flex-direction: column;
+  padding: 3rem;
+
+  display: grid;
+  align-content: center;
   justify-content: center;
-  align-items: center;
-  row-gap: 2rem;
+  justify-items: center;
+  grid-row-gap: 2rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
 
   &__list {
     display: grid;
-    grid-template-columns: auto max-content;
-    gap: 2rem;
-    justify-content: center;
+    grid-template-columns: min-content max-content;
+    grid-column-gap: 2rem;
+    grid-row-gap: 5vh;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-template-columns: repeat(3, min-content max-content);
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: min-content max-content;
+    }
   }
 
   &__img {
-    width: 10rem;
+    width: 7rem;
     border-radius: 50%;
-  }
-
-  &__details {
-    font-size: 1.6rem;
-    align-self: center;
+    display: block;
   }
 
   &__sold {
-    color: $color-grey-light-2;
     text-transform: uppercase;
+    color: $color-grey-light-2;
+    margin-top: -3px;
   }
 }
