--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -19,7 +19,6 @@
   &--light {
     color: $color-grey-light-1;
   }
-
   &--dark {
     color: $color-grey-dark-1;
   }
@@ -39,7 +38,6 @@
   &--light {
     color: $color-grey-light-1;
   }
-
   &--dark {
     color: $color-grey-dark-1;
   }
@@ -48,13 +46,14 @@
 .btn {
   background-color: $color-primary;
   color: #fff;
-  border: 0;
+  border: none;
   border-radius: 0;
   font-family: $font-display;
+  font-size: 1.5rem;
   text-transform: uppercase;
   padding: 1.8rem 3rem;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all 0.2s;
 
   &:hover {
     background-color: $color-primary-dark;
@@ -64,15 +63,12 @@
 .mb-sm {
   margin-bottom: 2rem;
 }
-
 .mb-md {
   margin-bottom: 3rem;
 }
-
 .mb-lg {
   margin-bottom: 4rem;
 }
-
 .mb-hg {
   margin-bottom: 8rem;
 }
